# pool_game

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/: ball.h  board.h  constants.h  game.h
src/: ball.cpp  board.cpp  game.cpp  main.cpp
